font spacing fixes

--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -33,5 +33,5 @@ label,
 select {
     font-family: $bodyFont;
     font-size: 2.5rem;
-    margin-bottom: 0;
+    margin: 0;
 }
