--- a/styles/style.css
+++ b/styles/style.css
@@ -330,7 +330,7 @@ label,
 select {
   font-family: "Hind", sans-serif;
   font-size: 2.5rem;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 header {
